k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-backend
  namespace: school-dashboard
  labels:
    app: school-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: school-backend
  template:
    metadata:
      labels:
        app: school-backend
    spec:
      containers:
        - name: backend
          image: ndzalo9707/school-dashboard-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
