k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-frontend
  namespace: school-dashboard
  labels:
    app: school-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: school-frontend
  template:
    metadata:
      labels:
        app: school-frontend
    spec:
      containers:
        - name: frontend
          image: Ndzalo9707/school-dashboard-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
