k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-frontend-service
  namespace: school-dashboard
spec:
  selector:
    app: school-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
